--- a/frontend/src/components/Carousel.css
+++ b/frontend/src/components/Carousel.css
@@ -19,6 +19,11 @@
   transition: transform 0.5s ease-in-out;
 }
 
+.carousel-inner a{
+  color: black;
+  text-decoration: none;
+}
+
 .movie-card {
   flex: 0 0 120px;
   max-width: 120px;
