--- a/frontend/src/components/Carousel.css
+++ b/frontend/src/components/Carousel.css
@@ -21,9 +21,11 @@
   width: 100%;
   position: relative;
   overflow-y: inherit;
+  color: black;
+  text-decoration: none;
 }
 
-.carousel-inner a{
+.carousel-inner-custom a{
   color: black;
   text-decoration: none;
 }
@@ -72,7 +74,7 @@
 }
 
 .carousel-control:hover {
-  background: #333; /* Dark background on hover */
+  background: #636363; /* Dark background on hover */
   color: #fff; /* White icon */
   transform: translateY(-50%) scale(1.1); /* Slightly enlarge */
 }
@@ -90,7 +92,7 @@
 }
 
 .carousel-control:disabled {
-  color: rgba(0, 0, 0, 0.3); /* Subtle disabled state */
+  color: rgba(248, 0, 0, 0.8); /* Subtle disabled state */
   cursor: not-allowed;
 }
 
