--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -18,3 +18,14 @@ html, body {
 .list-group-item:hover {
   background-color: #f8f9fa;
 }
+
+.navbar-transition {
+  opacity: 0;
+  transition: opacity 0.5s ease, transform 0.5s ease;
+  transform: translateY(-100px);
+}
+
+.navbar-transition.show-navbar {
+  opacity: 1;
+  transform: translateY(0);
+}
