--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,4 +1,5 @@
-html, body {
+html,
+body {
   margin: 0;
   padding: 0;
   width: 100%;
@@ -52,16 +53,18 @@ html, body {
 }
 
 .movie-card-movies {
-  flex: 0 0 120px;
+  flex: 0 0 180px;
   gap: 10px;
-  max-width: 120px;
-  min-width: 120px;
+  max-width: 180px;
+  min-width: 180px;
   text-align: left;
   cursor: pointer;
   transition: transform 0.3s ease-in-out;
+  text-decoration: none;
+  color: black;
 }
-.movie-card-movies a{
-  color:black;
+.movie-card-movies a {
+  color: black;
   text-decoration: none;
 }
 
@@ -71,7 +74,7 @@ html, body {
 
 .movie-card-movies img {
   width: 100%;
-  height: 180px;
+  height: 270px;
   border-radius: 8px;
   object-fit: cover;
 }
